updated workflow and icon

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -20,16 +20,17 @@ jobs:
     - name: Set up Python
       uses: actions/setup-python@v4
       with:
-        python-version: '3.10'
+        python-version: '3.11'
 
     - name: Install dependencies
       run: |
         pip install -r requirements.txt
         pip install pyinstaller
+        pip install pillow
 
     - name: Build executable
       run: |
-        pyinstaller --onefile --icon=icon.png main.py
+        pyinstaller --onefile --add-data "icon.png;." --icon=icon.ico main.py
 
     - name: Upload to Release
       uses: softprops/action-gh-release@v1
