--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 pillow==12.0.0
 pyaml==25.7.0
-PyQt5==5.15
-PyQt5-Qt5==5.15
-PyQt5_sip==12.17
+PyQt5>=5.15.0,<5.16.0
+PyQt5-Qt5>=5.15.0,<5.16.0
+PyQt5_sip>=12.17,<13
 PyYAML==6.0.3
